# nanofed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/getting_started/: concepts.rst  tutorial.rst
docs/source/release_notes/: index.rst  template.rst  v0.1.3.rst  v0.1.4.rst
examples/mnist/: Dockerfile  client_config.yaml  run_experiment.py  run_experiment_cli.py  server_config.yaml  tutorial.ipynb
fl/aggregator/: __init__.py  base.py  fed_avg.py  fed_prox.py  personalized.py
fl/communication/: client.py  endpoints.py  protocols.py
fl/config/: logging.py  settings.py
fl/core/: base.py  client.py  exceptions.py  protocols.py  server.py
fl/security/: encryption.py
fl/utils/: common.py
nanofed/: __init__.py
nanofed/cli/: client.py  server.py
nanofed/communication/http/: client.py  server.py  types.py
nanofed/config/: __init__.py  schema.py
nanofed/core/: __init__.py  interfaces.py  types.py
nanofed/data/: mnist.py
nanofed/models/: mnist.py
nanofed/orchestration/: __init__.py  coordinator.py  types.py  utils.py
nanofed/privacy/: __init__.py  config.py  constants.py  exceptions.py  mechanisms.py  types.py
nanofed/privacy/accountant/: __init__.py  base.py  gaussian.py  rdp.py
nanofed/privacy/noise/: __init__.py  base.py  generators.py
nanofed/server/: __init__.py  fault_tolerance.py  validation.py
nanofed/server/aggregator/: __init__.py  base.py  fedavg.py  privacy.py  secure.py
nanofed/server/model_manager/: manager.py
nanofed/trainer/: __init__.py  base.py  callback.py  private.py  torch.py
nanofed/utils/: __init__.py  logger.py
scripts/: changelog.py  prepare_release.py  release.sh
tests/: conftest.py  test_client.py  test_client_communication.py  test_endpoints.py  test_security.py  test_server.py
tests/aggreator/: test_fed_avg.py  test_fed_prox.py  test_personalized_fed_avg.py
tests/helpers/: mock_client.py
tests/integration/: test_client_server_communication.py  test_mnist.py  test_privacy_accounting.py  test_privacy_integration.py
tests/unit/: helpers.py  test_aggregator.py  test_coordinator.py  test_http.py  test_model_manager.py  test_trainer.py
tests/unit/communication/: test_http_client.py  test_http_server.py
tests/unit/privacy/: test_config.py  test_mechanism.py
tests/unit/privacy/accountant/: test_base_accountant.py  test_gaussian.py  test_privacy_edge_cases.py  test_privacy_properties.py  test_privacy_stress.py  test_rdp.py
tests/unit/privacy/noise/: test_generators.py
tests/unit/server/: test_fault_tolerance.py  test_validation.py
tests/unit/server/aggregator/: test_fedavg.py  test_privacy_aggregation.py  test_secure.py
tests/unit/server/model_manager/: test_model_manager.py
tests/unit/trainer/: test_base_trainer.py  test_callback.py  test_private_trainer.py  test_torch.py
