[tool.poetry]
name = "fl"
version = "0.1.0"
description = ""
authors = ["camille-004 <dunningcamille@gmail.com>"]
readme = "README.md"
packages = [{include = "fl"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
numpy = "^2.1.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
tenseal = "^0.3.15"
diffprivlib = "^0.6.5"
cryptography = "^43.0.3"
aiohttp = "^3.10.10"
aiofiles = "^24.1.0"
fastapi = "^0.115.4"
websockets = "^13.1"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
trio = "^0.27.0"
starlette = "^0.41.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "A", "C"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "asyncio: mark test as async",
]
